syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1606
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarFetterLevelRewardRsp {
	int32 retcode = 14;
	uint64 avatar_guid = 12;
	uint32 fetter_level = 10;
	uint32 reward_id = 11;
}
